# forcamla

./: README.md  dune-project  forcamla.opam
.github/workflows/: static.yml  tests.yml
_build/: .db  .digest-db  trace.csexp  trace.csexp.old
_build/default/: META.forcamla  forcamla.dune-package  forcamla.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/69a98621e64b92a002ea4adaf1d7910c/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/lib/: forcamla.cma  forcamla.cmxa  forcamla.cmxs  formula.mli
_build/default/lib/.forcamla.objs/byte/: formula.cmi  formula.cmo  formula.cmt  formula.cmti
_build/default/lib/.forcamla.objs/native/: formula.cmx
_build/default/lib/.merlin-conf/: lib-forcamla
_build/default/test/: test_forcamla.ml
_build/default/test/.merlin-conf/: exe-test_forcamla
_build/default/test/.test_forcamla.eobjs/byte/: dune__exe__Test_forcamla.cmi  dune__exe__Test_forcamla.cmti
_build/default/test/.test_forcamla.eobjs/native/: dune__exe__Test_forcamla.cmx
_build/install/default/lib/forcamla/: META  dune-package  forcamla.cma  forcamla.cmxa  forcamla.cmxs  formula.cmi  formula.cmt  formula.cmti  formula.cmx  formula.ml  formula.mli  opam
doc/: index.mld
lib/: dune  formula.ml  formula.mli
test/: dune  test_forcamla.ml
